# amplifier-module-tool-slash-command

./: COMMANDS_ANALYSIS.md  FORWARD_PLAN.md  README.md  pyproject.toml
amplifier_module_tool_slash_command/: __init__.py  command_loader.py  executor.py  git_fetcher.py  permissions.py  registry.py  template_processor.py  tool.py
behaviors/: slash-command.yaml
bundle/: bundle.md
bundle/commands/: explain.md  quick-review.md
docs/: SHADOW_TESTING_EXPERIENCE.md  TESTING_WITH_SHADOW.md
examples/commands/: document.md  explain.md  optimize.md  review.md  security.md  test.md
examples/commands/dev/: context-dump.md  deps-audit.md  diff-review.md  file-review.md  git-summary.md  quick-test.md
examples/commands/github/: issues-no-comments.md  pr-activity.md  stale-issues.md
examples/commands/workflow/: deps-check.md  standup.md  todo-scan.md
slash_command/: __init__.py  executor.py  parser.py  registry.py  template_processor.py  tool.py
tests/: __init__.py  test_command_loader.py  test_parser.py  test_permissions.py  test_registry.py  test_template_processor.py
